<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LayoutAdvance"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX    INFO TIME PART   XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:orientation="vertical"

                >

                <TextView
                    android:id="@+id/StartingTimeRunning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StartingTimeRunning"
                    android:textSize="@dimen/text_small"

                    />

                <TextView
                    android:id="@+id/DurationTimeRunning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DurationTimeRunning"
                    android:textSize="@dimen/text_small"

                    />

            </LinearLayout>


        </LinearLayout>


        <!-- XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX    LMIN, LEQ, LMAX PART   XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX   -->
        <LinearLayout
            android:id="@+id/LayoutAllLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/LayoutLMin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LMin_label" />

                <TextView
                    android:id="@+id/LMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LMin"
                    android:textSize="@dimen/text_medium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutLAeqTimeDisplay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="1dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/LAeqTimeDisplay_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LAeqTimeDisplay_label" />

                <TextView
                    android:id="@+id/LAeqTimeDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LAeqTimeDisplay"
                    android:textSize="@dimen/text_medium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutLAeqRunning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LAeqRunning_label" />

                <TextView
                    android:id="@+id/LAeqRunning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LAeqRunning"
                    android:textSize="@dimen/text_medium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LMax_label" />

                <TextView
                    android:id="@+id/LMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LMax"
                    android:textSize="@dimen/text_medium" />

            </LinearLayout>


        </LinearLayout>

        <!-- XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX    LEVEL PART   XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX   -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/level_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:gravity="center"
                    android:text="@string/level_label"
                    android:textSize="@dimen/text_large" />

                <TextView
                    android:id="@+id/time_display_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="@dimen/text_small"

                    />

            </LinearLayout>

            <TextView
                android:id="@+id/level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/level"
                android:textSize="@dimen/text_huge" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/level_label_dBA"
                android:textSize="@dimen/text_small" />

        </LinearLayout>


        <!-- XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX    LEVEL NO PLOT   XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX   -->
        <LinearLayout
            android:id="@+id/LayoutLevelNoPlot"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/LevelNoPlotLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text=""
                android:textSize="@dimen/text_large" />

            <TextView
                android:id="@+id/LevelNoPlot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="110sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/level_label_dBA"
                android:textSize="@dimen/text_small" />
        </LinearLayout>


        <!-- XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX    LOG PART   XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX   -->
        <LinearLayout
            android:id="@+id/LayoutLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="2"
                android:gravity="left"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/StartingTimeLog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StartingTimeLogText"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:id="@+id/DurationTimeLog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DurationTimeLogText"
                    android:textSize="@dimen/text_small" />

            </LinearLayout>

            <Button
                android:id="@+id/ButtonRunning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:gravity="center"
                android:text="@string/ButtonRunning"
                android:textAllCaps="false"
                android:textSize="@dimen/text_small" />

            <Button
                android:id="@+id/ButtonLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:gravity="center"
                android:text="@string/ButtonLogTextStart"
                android:textAllCaps="false"
                android:textSize="@dimen/text_small" />
        </LinearLayout>

        <!--</LinearLayout>-->

        <!-- XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX    PLOT PART   XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX   -->


        <LinearLayout
            android:id="@+id/LayoutPlot1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/ShowLocLat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/StartingTimeRunning"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:id="@+id/ShowLocLong"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/StartingTimeRunning"
                    android:textSize="@dimen/text_small" />
            </LinearLayout>

            <Button
                android:id="@+id/LocReq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:layout_weight="0.05"
                android:gravity="center"
                android:text="Location"
                android:textAllCaps="false"
                android:textSize="@dimen/text_small" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/LayoutPlot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <it.piemonte.arpa.openoise.PlotSLMHistory
                android:id="@+id/PlotSLMHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <it.piemonte.arpa.openoise.PlotThirdOctave
                android:id="@+id/PlotThirdOctave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <!--<openoisetSonogram-->
            <!--android:id="@+id/PlotSonogram"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:visibility="gone"-->
            <!--/>-->

            <it.piemonte.arpa.openoise.PlotFFT
                android:id="@+id/PlotFFT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/plot_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:text="@string/plot_label_SLMHistory"
                android:textSize="@dimen/text_small"
                android:textStyle="italic" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>


